--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,43 +27,40 @@
 
     <string name="TC_name">Nombre Tanda</string>
     <string name="TC_folio">B6969</string>
-    <string name="TC_amount">$800</string>
+    <string name="TC_amount">$9,800</string>
     <string name="TC_currency">pesos</string>
     <string name="TC_payment">$200</string>
 
-    <string name="TC_invite_status">Invitación</string>
-    <string name="TC_pending_status">En espera</string>
-    <string name="TC_active_status">Activa</string>
-    <string name="TC_owe_status">Debes!</string>
-    <string name="TC_finished_status">Terminada</string>
 
-    <string name="TC_invite_msg_complete">para recibir $800 pesos en 13 dias el 19/feb</string>
+    <string name="TC_invite_msg_complete">empieza 19/feb, te tocaria en 13 dias</string>
     <string name="TC_invite_msg1">para recibir </string>
     <string name="TC_invite_msg2">$800 pesos</string>
     <string name="TC_invite_msg3">en 13 dias </string>
     <string name="TC_invite_msg4">el 19/feb</string>
     <string name="TC_invite_action">Unirme</string>
 
-    <string name="TC_pending_msg_complete">para recibir $800 pesos en 13 dias el 19/feb</string>
+    <string name="TC_pending_msg_complete">empieza 19/feb, te tocará en 13 dias</string>
     <string name="TC_pending_msg1">para recibir </string>
     <string name="TC_pending_msg2">$800 pesos</string>
     <string name="TC_pending_msg3">en 13 dias </string>
     <string name="TC_pending_msg4">el 19/feb</string>
-    <string name="TC_pending_action">Tu lugar ya reservado, motiva los demás!</string>
+    <string name="TC_pending_action">Tu lugar reservado</string>
 
-    <string name="TC_active_before_msg_complete">recibirás $800 pesos en 13 dias el 19/feb</string>
+    <string name="TC_active_before_msg_complete">recibes en 13 dias, el 26/feb/2016</string>
     <string name="TC_active_before_msg1">recibirás </string>
     <string name="TC_active_before_msg2">$800 pesos</string>
     <string name="TC_active_before_msg3">en 13 dias </string>
     <string name="TC_active_before_msg4">el 19/feb</string>
+    <string name="TC_active_before_action">Detalles</string>
 
-    <string name="TC_active_after_msg_complete">Felicidades!, recibiste $800 el 19/feb</string>
+    <string name="TC_active_after_msg_complete">Felicidades!, recibiste el 26/feb/2016</string>
     <string name="TC_active_after_msg1">Felicidades! </string>
     <string name="TC_active_after_msg2">recibiste</string>
     <string name="TC_active_after_msg3">$800 pesos </string>
     <string name="TC_active_after_msg4">el 19/feb</string>
+    <string name="TC_active_after_action">Detalles</string>
 
-    <string name="TC_owe_msg_complete">Recibiste $800 pesos el 5/feb/2016</string>
+    <string name="TC_owe_msg_complete">El 5/feb/2016 recibiste $800 pesos</string>
     <string name="TC_owe_msg1">Recibiste $800 pesos</string>
     <string name="TC_owe_msg2">el 5/feb/2016</string>
     <string name="TC_owe_msg3">Aún Debes</string>
@@ -75,5 +72,12 @@
     <string name="TC_finished_msg1">El 5/feb/2016</string>
     <string name="TC_finished_msg2">recibiste $800 pesos</string>
     <string name="TC_finished_action">Sigue ahorrando!</string>
+
+    <string name="TC_status_invite">Estas invitado</string>
+    <string name="TC_status_pending">En espera</string>
+    <string name="TC_status_active">Activa</string>
+    <string name="TC_status_owe">Debes</string>
+    <string name="TC_status_finished">Terminó</string>
+
 
 </resources>
