Added Refresh button to options menu (for debuggin) that now launches AsyncTask to fetch API weather info correctly in a JSON

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
 
     <string name="action_settings">Ajustes</string>
     <string name="action_logout">LogOff</string>
+    <string name="action_refresh">refresh</string>
 
     <string name="TC_name">Nombre Tanda</string>
     <string name="TC_folio">B6969</string>
