Adding a TandaDetail activity fragment (seems this is a longer version and it has a warning of "method invocation getSupportActionBar().setDeisplayHomeAsUpEnabled(true) may produce a java.lang.NullPointeException) Will try to streamline this with less layouts and .java files for next commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="TC_status_active">Activa</string>
     <string name="TC_status_owe">Debes</string>
     <string name="TC_status_finished">Terminó</string>
+    <string name="title_activity_tanda_detail">TandaDetailActivity</string>
 
 
 </resources>
