Fixed Detail Activity screen to show ActionBar. Added a Settings Activity that is now clickable from Main and Detail Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,6 @@
     <string name="TC_status_owe">Debes</string>
     <string name="TC_status_finished">Terminó</string>
     <string name="title_activity_tanda_detail">TandaDetail</string>
-
+    <string name="title_activity_settings">Ajustes</string>
 
 </resources>
